<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="locale">en</string>
    <string name="name" translatable="false">GlucoDataHandler</string>
    <string name="source_gdh" translatable="false">GlucoDataHandler</string>
    <string name="source_gdh_second" translatable="false">GDH Second</string>
    <string name="unit_mgdl" translatable="false">mg/dl</string>
    <string name="unit_mmol" translatable="false">mmol/l</string>
    <string name="info_label_iob" translatable="false">IOB</string>
    <string name="info_label_cob" translatable="false">COB</string>
    <string name="info_label_iob_talkback" translatable="false">I.O.B.</string>
    <string name="info_label_cob_talkback" translatable="false">C.O.B.</string>
    <string name="menu_facebook" translatable="false">Facebook</string>
    <string name="menu_google_groups" translatable="false">Google Groups</string>
    <string name="glucodataauto_link" translatable="false">https://github.com/pachi81/GlucoDataAuto/blob/main/README.md</string>
    <string name="help_link" translatable="false">https://github.com/pachi81/GlucoDataHandler/wiki/Sensors</string>
    <string name="update_link" translatable="false">https://github.com/pachi81/GlucoDataHandler/releases</string>
    <string name="support_link" translatable="false">https://github.com/pachi81/GlucoDataHandler/issues</string>
    <string name="gda_support_link" translatable="false">https://github.com/pachi81/GlucoDataAuto/issues</string>
    <string name="watchdrip_link" translatable="false">https://watchdrip.org</string>
    <string name="esel_link" translatable="false">https://github.com/BernhardRo/Esel/blob/master/README.md</string>
    <string name="dexcom_account_non_us_url" translatable="false">https://myaccount.dexcom.eu</string>
    <string name="dexcom_account_us_url" translatable="false">https://myaccount.dexcom.com</string>
    <string name="dexcom_account_jp_url" translatable="false">https://myaccount.dexcom.jp</string>
    <string name="dexcom_server_status_url" translatable="false">https://status.dexcom.com</string>
    <string name="facebook_gdh_group_url" translatable="false">https://www.facebook.com/groups/823964236542396</string>
    <string name="google_gdh_group_url" translatable="false">https://groups.google.com/g/glucodatahandler</string>
    <string name="playstore_gdc_watchfaces" translatable="false">https://play.google.com/store/apps/dev?id=7197840107055554214</string>
    <string name="playstore_dmm_watchfaces" translatable="false">https://play.google.com/store/apps/dev?id=6551812103351455972</string>
    <string name="playstore_pujie_watchfaces" translatable="false">https://play.google.com/store/apps/dev?id=7780011900367662392</string>
    <string name="garmin_watchfaces" translatable="false">https://apps.garmin.com/search?keywords=xdrip</string>
    <string name="pebble_watchfaces" translatable="false">https://apps.rebble.io/en_US/search/watchfaces/1?native=false&amp;query=xdrip</string>
    <string name="glance_watchfaces" translatable="false">https://glancewatchface.com</string>
    <string name="video_tutorial_librelinkup" translatable="false">https://youtu.be/YRs9nY4DgnA?si=v108UhnBNfQSeK2I</string>
    <string name="video_tutorial_juggluco" translatable="false">https://youtu.be/evS5rXDiciY?si=DTxlGYhYm-nNboHl</string>
    <string name="vibrate_pattern_super_mario" translatable="false">Super Mario</string>
    <string name="vibrate_pattern_turtles" translatable="false">Turtles</string>
    <string name="vibrate_pattern_final_fantasy" translatable="false">Final Fantasy</string>
    <string name="vibrate_pattern_star_wars" translatable="false">Star Wars</string>
    <string name="vibrate_pattern_power_rangers" translatable="false">Power Rangers</string>
    <string name="vibrate_pattern_james_bond" translatable="false">James Bond</string>
    <string name="vibrate_pattern_mortal_kombat" translatable="false">Mortal Kombat</string>
    <string name="empty_string" translatable="false" />
    <string name="source_juggluco" translatable="false">Juggluco</string>
    <string name="source_xdrip" translatable="false">xDrip+</string>
    <string name="source_libreview" translatable="false">LibreLinkUp</string>
    <string name="source_nightscout" translatable="false">Nightscout</string>
    <string name="source_dexcom_share" translatable="false">Dexcom Share</string>
    <string name="source_dexcom_byoda" translatable="false">Dexcom BYODA</string>
    <string name="source_ns_emulator" translatable="false">Dexcom/Eversense</string>
    <string name="source_diabox" translatable="false">DiaBox</string>
    <string name="source_libre_patched" translatable="false">Libre patched app</string>
    <string name="pref_source_eversense_info" translatable="false">Eversense (ESEL)/Dexcom BYODA (xDrip+)</string>
    <string name="pref_source_dexcom_byoda_info" translatable="false">Dexcom BYODA (AAPS)</string>
    <string name="pref_source_libre_patched" translatable="false">Libre patched app</string>
    <string name="info_label_sensor_id">Sensor</string>
    <string name="info_label_value">Value</string>
    <string name="info_label_raw">Raw</string>
    <string name="info_label_delta">Delta</string>
    <string name="info_label_rate">Rate</string>
    <string name="info_label_timestamp">Timestamp</string>
    <string name="info_label_iob_cob_timestamp">IOB/COB time</string>
    <string name="info_label_timediff">Timediff</string>
    <string name="info_label_alarm">Alarm</string>
    <string name="info_label_source">Source</string>
    <string name="info_label_per_minute">per minute</string>
    <string name="no_data">No data received yet!\nPlease configure a source first.</string>
    <string name="elapsed_time">%1$d min</string>
    <string name="elapsed_time_hour">\> 1h</string>
    <string name="rate_double_up">rising very quickly</string>
    <string name="rate_single_up">rising quickly</string>
    <string name="rate_forty_five_up">rising</string>
    <string name="rate_flat">steady</string>
    <string name="rate_forty_five_down">falling</string>
    <string name="rate_single_down">falling quickly</string>
    <string name="rate_double_down">falling very quickly</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="alarm_none">-</string>
    <string name="alarm_very_low">very low</string>
    <string name="alarm_low">low</string>
    <string name="alarm_high">high</string>
    <string name="alarm_very_high">very high</string>
    <string name="very_low">Very low</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="very_high">Very high</string>
    <string name="activity_main_no_source_label">Source: not active</string>
    <string name="activity_main_connected_label">Wear: connected (%1$s)</string>
    <string name="activity_main_disconnected_label">Wear: disconnected</string>
    <string name="activity_main_car_connected_label">Android Auto: connected</string>
    <string name="activity_main_car_disconnected_label">Android Auto: disconnected</string>
    <string name="activity_main_high_contrast_enabled">High contrast accessibility is active!\nPress here to go to settings.</string>
    <string name="no_new_value">No new value since %1$d minutes!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_group_github">GitHub</string>
    <string name="menu_update">Updates</string>
    <string name="menu_support">Support</string>
    <string name="menu_help">Help</string>
    <string name="tasker_event_glucodata">New glucose value</string>
    <string name="tasker_event_glucodata_obsolete">Obsolete value</string>
    <string name="tasker_event_glucodata_alarm">Glucose alarm</string>
    <string name="tasker_wear_connection_state">Wear connection</string>
    <string name="tasker_android_auto_connection_state">Android Auto connection</string>
    <string name="tasker_target_range_state">Glucose range change</string>
    <string name="source_phone">Phone</string>
    <string name="source_wear">Wear</string>
    <string name="source_state_not_active">Not active</string>
    <string name="source_state_in_progress">In progress</string>
    <string name="source_state_ok">OK</string>
    <string name="source_state_no_new_value">No new value</string>
    <string name="source_state_no_connection">No internet connection</string>
    <string name="source_state_error">Error</string>
    <string name="source_interval">Interval</string>
    <string name="source_interval_summary">Interval of requesting data from source.</string>
    <string name="source_delay">Delay</string>
    <string name="source_delay_summary">Delay in seconds before requesting the data from cloud, because if takes some time until the data is present there.</string>
    <string name="src_cat_libreview">LibreLinkUp</string>
    <string name="src_enabled">Enable</string>
    <string name="src_libre_enabled_summary">Enable LibreLinkUp follower, if user and password are set.</string>
    <string name="src_libre_user">E-mail</string>
    <string name="src_libre_user_summary">E-mail for LibreLinkUp login</string>
    <string name="src_password">Password</string>
    <string name="src_libre_password_summary">Password for LibreLinkUp</string>
    <string name="src_libre_reconnect">Reconnect</string>
    <string name="src_libre_reconnect_summary">On next interval a new login will be executed.</string>
    <string name="src_cat_nightscout">Nightscout</string>
    <string name="src_ns_enabled">Enable</string>
    <string name="src_ns_enabled_summary">Enable Nightscout follower.</string>
    <string name="src_ns_url">Nightscout URL</string>
    <string name="src_ns_url_summary">URL of the Nightscout server.</string>
    <string name="src_ns_secret">API Secret</string>
    <string name="src_ns_secret_summary">API Secret to access the data (optional).</string>
    <string name="src_ns_token">Access Token</string>
    <string name="src_ns_token_summary">Add your access token, if you need one (optional).</string>
    <string name="source_request_interval_always">Always</string>
    <string name="source_request_interval_1">1 minute</string>
    <string name="source_request_interval_5">5 minutes</string>
    <string name="source_request_interval_10">10 minutes</string>
    <string name="source_request_interval_15">15 minutes</string>
    <string name="source_request_interval_20">20 minutes</string>
    <string name="source_request_interval_30">30 minutes</string>
    <string name="source_request_interval_alarm">Alarm only</string>
    <string name="state_disabled">disabled</string>
    <string name="state_not_connected">not connected</string>
    <string name="state_connected">connected</string>
    <string name="state_error">error: %s</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_notification">Notification</string>
    <string name="src_mqtt_enabled" translatable="false">Enable MQTT backend</string>
    <string name="src_mqtt_enabled_summary" translatable="false">Receive data from MQTT broker</string>
    <string name="src_mqtt_url" translatable="false">Broker URL</string>
    <string name="src_mqtt_url_summary" translatable="false">TCP or SSL URL (e.g., tcp://broker.hivemq.com:1883 or ssl://yourbroker:8883)</string>
    <string name="src_mqtt_user" translatable="false">Username</string>
    <string name="src_mqtt_user_summary" translatable="false">Username for authentication</string>
    <string name="src_mqtt_password" translatable="false">Password</string>
    <string name="src_mqtt_password_summary" translatable="false">Password for authentication</string>
    <string name="src_mqtt_topic" translatable="false">Topic</string>
    <string name="src_mqtt_topic_summary" translatable="false">MQTT topic to subscribe to</string>
</resources>