<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="source_mqtt_enabled"
        android:title="@string/src_mqtt_enabled"
        android:summary="@string/src_mqtt_enabled_summary"
        app:iconSpaceReserved="false" />
    <androidx.preference.EditTextPreference
        android:defaultValue=""
        android:key="source_mqtt_url"
        android:title="@string/src_mqtt_url"
        android:summary="@string/src_mqtt_url_summary"
        app:iconSpaceReserved="false" />
    <androidx.preference.EditTextPreference
        android:defaultValue=""
        android:key="source_mqtt_topic"
        android:title="@string/src_mqtt_topic"
        android:summary="@string/src_mqtt_topic_summary"
        app:iconSpaceReserved="false" />
    <androidx.preference.EditTextPreference
        android:defaultValue=""
        android:key="source_mqtt_user"
        android:title="@string/src_mqtt_user"
        android:summary="@string/src_mqtt_user_summary"
        app:iconSpaceReserved="false" />
    <androidx.preference.EditTextPreference
        android:defaultValue=""
        android:key="source_mqtt_password"
        android:title="@string/src_mqtt_password"
        android:summary="@string/src_mqtt_password_summary"
        android:inputType="textPassword"
        app:iconSpaceReserved="false" />
</PreferenceScreen>